[metadata]
name = ccx-messaging
author = Red Hat Inc.
description-file = README.md
license = Apache 2.0
long_description_content_type = text/markdown
home-page = https://github.com/RedHatInsights/insights-ccx-messaging
classifier =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires =
    attrs
    insights-core
    insights-core-messaging
    requests
    s3fs
    retry
setup_requires =
    setuptools
    setuptools_scm
    wheel

[options.packages.find]
exclude =
    test*

[options.extras_require]
dev =
    black
    coverage
    freezegun
    prometheus-client
    pycco
    pycodestyle
    pydocstyle
    pylint
    pytest
    pytest-cov

[flake8]
max-line-length = 100

[pycodestyle]
max-line-length = 100
