[metadata]
name = ccx-messaging
author = Red Hat Inc.
description_file = README.md
license = Apache 2.0
long_description_content_type = text/markdown
home_page = https://github.com/RedHatInsights/insights-ccx-messaging
classifier =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
install_requires =
    app-common-python>=0.2.3
    boto3
    confluent-kafka>=2.0.0
    insights-core>=3.1.2
    insights-core-messaging>=1.2.1
    jsonschema>=4.0.0
    prometheus-client>=0.16.0
    python-json-logger
    PyYAML>=6.0
    requests
    watchtower>=3.0.0
setup_requires =
    build
    setuptools
    setuptools_scm
    wheel

[options.packages.find]
exclude =
    test*

[options.extras_require]
dev =
    black
    coverage
    flake8
    freezegun
    prometheus-client
    pycco
    pycodestyle
    pydocstyle
    pylint
    pytest
    pytest-cov


[pycodestyle]
max-line-length = 100
