[metadata]
name = ccx-messaging
author = Red Hat Inc.
description_file = README.md
license = Apache 2.0
long_description_content_type = text/markdown
home_page = https://github.com/RedHatInsights/insights-ccx-messaging
classifier =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    ccx_messaging

[options.extras_require]
dev =
    black
    coverage
    flake8
    freezegun
    prometheus-client
    pycco
    pycodestyle
    pydocstyle
    pylint
    pytest
    pytest-cov


[pycodestyle]
max-line-length = 100
